--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
 ## PHP versions we test against
 php:
   - 7.0
+  - nightly
   - hhvm
 
 ## Build matrix for lowest and highest possible targets
@@ -16,9 +17,13 @@ matrix:
   include:
     - php: 7.0
       env: dependencies=lowest
+    - php: nightly
+      env: dependencies=lowest
     - php: hhvm
       env: dependencies=lowest
     - php: 7.0
+      env: dependencies=highest
+    - php: nightly
       env: dependencies=highest
     - php: hhvm
       env: dependencies=highest
