Builds resource and latest build method on a project

--- a/yaml/project.yml
+++ b/yaml/project.yml
@@ -3,7 +3,10 @@ properties:
   projectId: int
   accountId: int
   accountName: int
-  builds: array
+  builds:
+    type: array
+    annotations:
+      collection: Build
   name: string
   slug: string
   repositoryType: string
