Account name is a string not an int

--- a/yaml/project.yml
+++ b/yaml/project.yml
@@ -2,7 +2,7 @@ class: Project
 properties:
   projectId: int
   accountId: int
-  accountName: int
+  accountName: string
   builds:
     type: array
     annotations:
